# quiz_system

./: .gitignore  CMakeLists.txt  README.md  builder.html  dashboard.html.html  focus-mode.html  package.bat  run.bat  run.sh  student-hub.html
data/: Q001.json  Q_1771686164106.json
include/interfaces/: IGradable.h
include/models/: MCQQuestion.h  Question.h  Quiz.h  QuizAttempt.h  ShortAnswerQuestion.h  Student.h  Teacher.h  TrueFalseQuestion.h  User.h
include/services/: FileManager.h
src/: main.cpp
ui/: index.html  quiz-builder.html  quiz-take.html  script.js  student-hub.html  student-reports.html  style.css  teacher-dashboard.html  teacher-roster.html
ui/css/: style.css
ui/js/: api.js  components.js
